--- a/frontend/package.json
+++ b/frontend/package.json
@@ -18,6 +18,7 @@
     "axios": "^1.13.5",
     "date-fns": "^4.1.0",
     "framer-motion": "^12.34.3",
+    "jszip": "^3.10.1",
     "lucide-react": "^0.575.0",
     "next": "16.1.6",
     "qrcode": "^1.5.4",
@@ -31,6 +32,7 @@
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
+    "@types/jszip": "^3.4.0",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
